--- a/index.scss
+++ b/index.scss
@@ -1,17 +1,10 @@
-@import "variables";
-@import "functions";
-@import "mixins";
-@import "queries";
-@import "classes";
-@import "builders";
-
-@each $columns in $grid-breakpoints {
-    @include visibility-classes($columns);
-    @include breakpoint($columns) {
-        @include expose-breakpoint($columns);
-        @include layout-classes($columns);
-        @include spacing-classes($columns);
-    }
-}
-
-@include spacing-classes("all");
+@import "lib/settings";
+@import "lib/mixins/classes";
+@import "lib/mixins/at";
+@import "lib/mixins/between";
+@import "lib/mixins/from";
+@import "lib/mixins/to";
+@import "lib/mixins/breakpoint";
+@import "lib/mixins/hide-at";
+@import "lib/mixins/show-at";
+@import "lib/mixins/no-media-queries";
