--- a/lib/classes/_spacing.scss
+++ b/lib/classes/_spacing.scss
@@ -1,57 +1,58 @@
-@import "../settings";
-
 /**
  * .m-4-1 - Margin, only grid-4, size 1
  * .pl-10-3 - Padding left, only grid-10, size 3
  * .mx-all-1 - Margin left and right, all grids
  */
 
-@mixin spacing-classes($columns) {
-  @for $i from 1 through length($grid-spacing) {
-    $size: nth($grid-spacing, $i) / $grid-font-size + rem;
-    .rg-p#{$i}-#{$columns} {
+@mixin rg-SpacingClasses($sizes, $base, $suffix: "", $rem: true) {
+  @for $i from 1 through length($sizes) {
+    $size: nth($sizes, $i);
+    @if $rem == true {
+      $size: $size / $base + rem;
+    }
+    .rg-p-#{$i}#{$suffix} {
       padding: $size;
     }
-    .rg-Space-pt#{$i}--#{$columns} {
+    .rg-pt-#{$i}#{$suffix} {
       padding-top: $size;
     }
-    .pr-#{$columns}-#{$i} {
+    .rg-pr-#{$i}#{$suffix} {
       padding-right: $size;
     }
-    .pb-#{$columns}-#{$i} {
+    .rg-pb-#{$i}#{$suffix} {
       padding-bottom: $size;
     }
-    .pl-#{$columns}-#{$i} {
+    .rg-pl-#{$i}#{$suffix} {
       padding-left: $size;
     }
-    .py-#{$columns}-#{$i} {
+    .rg-py-#{$i}#{$suffix} {
       padding-top: $size;
       padding-bottom: $size;
     }
-    .px-#{$columns}-#{$i} {
+    .rg-px-#{$i}#{$suffix} {
       padding-right: $size;
       padding-left: $size;
     }
-    .m-#{$columns}-#{$i} {
+    .rg-m-#{$i}#{$suffix} {
       margin: $size;
     }
-    .mt-#{$columns}-#{$i} {
+    .rg-mt-#{$i}#{$suffix} {
       margin-top: $size;
     }
-    .mr-#{$columns}-#{$i} {
+    .rg-mr-#{$i}#{$suffix} {
       margin-right: $size;
     }
-    .mb-#{$columns}-#{$i} {
+    .rg-mb-#{$i}#{$suffix} {
       margin-bottom: $size;
     }
-    .ml-#{$columns}-#{$i} {
+    .rg-ml-#{$i}#{$suffix} {
       margin-left: $size;
     }
-    .my-#{$columns}-#{$i} {
+    .rg-my-#{$i}#{$suffix} {
       margin-top: $size;
       margin-bottom: $size;
     }
-    .mx-#{$columns}-#{$i} {
+    .rg-mx-#{$i}#{$suffix} {
       margin-right: $size;
       margin-left: $size;
     }
