--- a/lib/functions/_columns.scss
+++ b/lib/functions/_columns.scss
@@ -1,3 +1,3 @@
 @function rg-columns($n) {
-  @return ((($grid-width / $grid-columns) * $n) / $grid-font-size) + em;
+  @return ((($rg-width / $rg-columns) * $n) / $rg-font-size) + rem;
 }
