--- a/lib/_settings.scss
+++ b/lib/_settings.scss
@@ -2,4 +2,4 @@ $rg-width: 960px !default;
 $rg-font-size: 16px !default;
 $rg-columns: 12 !default;
 $rg-breakpoints: 4 6 8 10 12 !default;
-$rg-fallback: false;
+$rg-spacing: 0.3125rem 0.625rem 1.25rem 2.5rem !default;
