--- a/index.scss
+++ b/index.scss
@@ -1,15 +1,17 @@
+@import "fonzie-spacing/index";
+@import "fonzie-fractional-widths/index";
 @import "lib/settings";
 @import "lib/classes/visibility";
 @import "lib/mixins/breakpoint";
 
-@mixin rg-ResponsiveGrid($fixed: false) {
+@mixin fz-ResponsiveGrid($fixed: false) {
 
   /**
    * Container for the grid
    */
   .rg-Page {
     @if $fixed == false {
-      max-width: $rg-width / $rg-font-size + em;      
+      max-width: $rg-width / $rg-font-size + em;
     }
     @else {
       width: $rg-width;
@@ -68,11 +70,11 @@
  * Loop through each breakpoint and build
  * classes for each using the breakpoint mixins
  * First breakpoint is no media query — mobile-first.
- * 
+ *
  * @param {List} $breakpoints List of column breakpoints
- * @param {Boolean} $spacing Include spacing classes? 
- * @param {Boolean} $visibility Include visibilty classes? 
- * @param {Boolean} $layout Include layout classes? 
+ * @param {Boolean} $spacing Include spacing classes?
+ * @param {Boolean} $visibility Include visibilty classes?
+ * @param {Boolean} $layout Include layout classes?
  * @api private
  */
 @mixin -rg-Breakpoints($breakpoints, $spacing: true, $visibility: true, $layout: true) {
@@ -90,11 +92,11 @@
 
 /**
  * Build all the class types for a breakpoint
- * 
+ *
  * @param {Mixed} $columns Number of columns
- * @param {Boolean} $spacing Include spacing classes? 
- * @param {Boolean} $visibility Include visibilty classes? 
- * @param {Boolean} $layout Include layout classes? 
+ * @param {Boolean} $spacing Include spacing classes?
+ * @param {Boolean} $visibility Include visibilty classes?
+ * @param {Boolean} $layout Include layout classes?
  * @api private
  */
 @mixin -rg-BreakpointClasses($columns, $spacing, $visibility, $layout) {
@@ -105,6 +107,6 @@
     @include fz-FractionalWidths($columns, $prefix: 'rg-');
   }
   @if $spacing != false {
-    @include fz-SpacingClasses($rg-spacing, $prefix: 'rg-', $suffix: "at#{$columns}"); 
+    @include fz-SpacingClasses($rg-spacing, $prefix: 'rg-', $suffix: "at#{$columns}");
   }
 }
